<resources>
    <!-- General / Common -->
    <string name="app_name">Conference</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="success">Success!</string>
    <string name="error">Error! Try again later.</string>

    <!-- Choose Conference -->
    <string name="choose_conference_header">Choose an Event:</string>

    <!-- Contact -->
    <string name="contact_success_sending">Success! You will receive a reply via email.</string>
    <string name="contact_error_sending">Failure! Message not sent. Try again later.</string>
    <string name="contact_first_name_hint">first name</string>
    <string name="contact_last_name_hint">last name</string>
    <string name="contact_email_hint">email</string>
    <string name="contact_message_hint">type your message here...</string>
    <string name="contact_button_submit">Submit</string>
    <string name="contact_error_required_fields">Error: All fields are required</string>
    <string name="contact_error_email_format">Error: Incorrect email format</string>

    <!-- Login -->
    <string name="login_continue_as">Continue as %1$s ?</string>
    <string name="login_required_field">Required field</string>
    <string name="login_validate_email_success">Success! Email sent</string>
    <string name="login_email_hint">email</string>
    <string name="login_password_hint">password</string>
    <string name="login_sign_in_button">Sign in</string>
    <string name="login_create_account_button">Create Account</string>
    <string name="login_no_account_question">Don\'t have an account?</string>
    <string name="login_continue">Yes, continue</string>
    <string name="login_signout">No, sign out</string>
    <string name="login_verify_email_instructions">Your email hasn\'t been verified. Check your email to verify your address. If you did not receive an email, click below to re-send a verification email.</string>
    <string name="login_verify_email_button">Send verification email</string>

    <!-- Menu -->
    <string name="menu_schedule">Schedule</string>
    <string name="menu_speakers">Speakers</string>
    <string name="menu_news">News</string>
    <string name="menu_partners">Partners</string>
    <string name="menu_about">About</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_choose_conference">Choose Conference</string>
    <string name="menu_settings">Settings</string>

    <!-- Settings -->
    <string name="settings_login">Login / Logout</string>

    <!-- Speakers -->
    <string name="speakers_first_and_last_name">%1$s %2$s</string>
    <string name="speakers_time_label">Time:</string>
    <string name="speakers_location_label">Location:</string>
    <string name="speakers_speaker_label">Speaker:</string>

</resources>
