<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sv_news_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_schedule_detail_item_image"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                tools:src="@drawable/fistbump"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_schedule_detail_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_schedule_detail_item_image"
                tools:text="Title of Event" />

            <TextView
                android:id="@+id/tv_schedule_detail_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_schedule_detail_title"
                android:text="@string/speakers_time_label" />

            <TextView
                android:id="@+id/tv_schedule_detail_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_schedule_detail_time_label"
                app:layout_constraintTop_toBottomOf="@id/tv_schedule_detail_title"
                tools:text="10:00 AM - 11:00 AM" />

            <TextView
                android:id="@+id/tv_schedule_detail_location_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_schedule_detail_time"
                android:text="@string/speakers_location_label" />

            <TextView
                android:id="@+id/tv_schedule_detail_location"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_schedule_detail_location_label"
                app:layout_constraintTop_toBottomOf="@id/tv_schedule_detail_time"
                tools:text="Breakout Room A" />

            <TextView
                android:id="@+id/tv_schedule_detail_speaker_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_schedule_detail_location_label"
                android:text="@string/speakers_speaker_label" />

            <TextView
                android:id="@+id/tv_schedule_detail_speaker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:textAlignment="viewStart"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_schedule_detail_speaker_label"
                app:layout_constraintTop_toBottomOf="@id/tv_schedule_detail_location"
                tools:text="Mrs. Johnson" />

            <View
                android:id="@+id/v_schedule_detail_divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_schedule_detail_speaker"/>

            <TextView
                android:id="@+id/tv_schedule_detail_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="Event details here"
                android:textAlignment="viewStart"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/text_color"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v_schedule_detail_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>